# ffdetect

./: CMakeLists.txt  Makefile  README.md  TODO  kalman_demo.cpp  main.cpp
config/: init
includes/: CSVLogger.h  FaceFeatures.h  LandmarkMapper.h  Tracker.h  Utils.h  common.h  config.h  ellipse.h  face.h
sources/: CSVLogger.cpp  FaceFeatures.cpp  LandmarkMapper.cpp  Tracker.cpp  Utils.cpp  config.cpp  ellipse.cpp  face.cpp
test/: locateMarker.cpp  oflow.cpp  readVideo.cpp  redcolor.cpp  temp_matching.cpp
